@@ -8,7 +8,7 @@ Standards-Version: 3.9.2
 Package: zentyal-openchange
 Architecture: all
 Depends: zentyal-core (>= 3.2), zentyal-core (<< 3.3),
- zentyal-mail, zentyal-samba,
+ zentyal-mail, zentyal-samba (>= 3.2.14),
  openchangeserver (>= 1:2.0-QUADRANT-371-g4dd336c-0zentyal0),
  libstring-random-perl,
  sogo-openchange (>= 2.1.0-zentyal6),
