@@ -172,6 +172,16 @@ sub precondition
         $self->{preconditionFail} = 'notProvisioned';
         return undef;
     }
+    my $dmd = $samba->dMD();
+    unless ($dmd->ownedByZentyal()) {
+        # Samba is not managing the Schema of the Active Directory.
+        unless (defined $self->parentModule->configurationContainer()) {
+            # There is no an existing Exchange or OpenChange server already, and thus, we require to change the
+            # Schema but it's not possible.
+            $self->{preconditionFail} = 'schemaNotWritable';
+            return undef;
+        }
+    }
     unless ($self->parentModule->isEnabled()) {
         $self->{preconditionFail} = 'notEnabled';
         return undef;
@@ -225,6 +235,12 @@ sub preconditionFailMsg
                   'provisioning the {y} module database.',
                   x => $samba->printableName(),
                   y => $self->parentModule->printableName());
+    }
+    if ($self->{preconditionFail} eq 'schemaNotWritable') {
+        return __('Your setup is not supported by Zentyal right now. You need either, have a MS Exchange ' .
+                  'installed already or provision OpenChange on the Samba server that manages the Active ' .
+                  'Directory schema. This server is not able to manage the schema, and thus cannot modify ' .
+                  'it to apply the required changes by OpenChange.');
     }
     if ($self->{preconditionFail} eq 'notEnabled') {
         return __x('You must enable the {x} module before provision the ' .
